// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabList renders correctly stretched tab list 1`] = `
<div
  className="tabsWrapper tabs--wrapper stretched stretched"
  data-testid="tab-list"
>
  <ul
    className="tabsList tabs-list"
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tabWrapper tab--wrapper active"
      data-testid="tab"
      role="tab"
    >
      <a
        className="tabInner tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
    <li
      aria-disabled={false}
      aria-selected={false}
      className="tabWrapper tab--wrapper"
      data-testid="tab"
      role="tab"
    >
      <a
        className="tabInner tab-inner"
        onClick={[Function]}
      >
        Second
      </a>
    </li>
    <li
      aria-disabled={false}
      aria-selected={false}
      className="tabWrapper tab--wrapper"
      data-testid="tab"
      role="tab"
    >
      <a
        className="tabInner tab-inner"
        onClick={[Function]}
      >
        Third
      </a>
    </li>
  </ul>
</div>
`;

exports[`TabList renders correctly with activeTabId 1`] = `
<div
  className="tabsWrapper tabs--wrapper Compact Compact"
  data-testid="tab-list"
>
  <ul
    className="tabsList tabs-list"
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={false}
      className="tabWrapper tab--wrapper"
      data-testid="tab"
      role="tab"
    >
      <a
        className="tabInner tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tabWrapper tab--wrapper active"
      data-testid="tab"
      role="tab"
    >
      <a
        className="tabInner tab-inner"
        onClick={[Function]}
      >
        Second
      </a>
    </li>
  </ul>
</div>
`;

exports[`TabList renders correctly with children 1`] = `
<div
  className="tabsWrapper tabs--wrapper Compact Compact"
  data-testid="tab-list"
>
  <ul
    className="tabsList tabs-list"
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tabWrapper tab--wrapper active"
      data-testid="tab"
      role="tab"
    >
      <a
        className="tabInner tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
  </ul>
</div>
`;

exports[`TabList renders correctly with className 1`] = `
<div
  className="tabsWrapper tabs--wrapper test Compact Compact"
  data-testid="tab-list"
>
  <ul
    className="tabsList tabs-list"
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tabWrapper tab--wrapper active"
      data-testid="tab"
      role="tab"
    >
      <a
        className="tabInner tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
  </ul>
</div>
`;

exports[`TabList renders correctly with id 1`] = `
<div
  className="tabsWrapper tabs--wrapper Compact Compact"
  data-testid="tab-list_test"
  id="test"
>
  <ul
    className="tabsList tabs-list"
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tabWrapper tab--wrapper active"
      data-testid="tab"
      role="tab"
    >
      <a
        className="tabInner tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
  </ul>
</div>
`;

exports[`TabList renders correctly with size 1`] = `
<div
  className="tabsWrapper tabs--wrapper Compact Compact"
  data-testid="tab-list"
>
  <ul
    className="tabsList tabs-list lg lg"
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tabWrapper tab--wrapper active"
      data-testid="tab"
      role="tab"
    >
      <a
        className="tabInner tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
    <li
      aria-disabled={false}
      aria-selected={false}
      className="tabWrapper tab--wrapper"
      data-testid="tab"
      role="tab"
    >
      <a
        className="tabInner tab-inner"
        onClick={[Function]}
      >
        Second
      </a>
    </li>
  </ul>
</div>
`;

exports[`TabList renders correctly with tabType 1`] = `
<div
  className="tabsWrapper tabs--wrapper stretched stretched"
  data-testid="tab-list"
>
  <ul
    className="tabsList tabs-list"
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tabWrapper tab--wrapper active"
      data-testid="tab"
      role="tab"
    >
      <a
        className="tabInner tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
    <li
      aria-disabled={false}
      aria-selected={false}
      className="tabWrapper tab--wrapper"
      data-testid="tab"
      role="tab"
    >
      <a
        className="tabInner tab-inner"
        onClick={[Function]}
      >
        Second
      </a>
    </li>
  </ul>
</div>
`;
